multi containment sizes work. can switch sizes and add correctly. overflow text works correctly and gets removed on apply. Cancelled gets created, but not being used currently.

--- a/scss/_jquery.scss
+++ b/scss/_jquery.scss
@@ -10,6 +10,10 @@
 	&.editing .ui-resizable-handle {
 		background-color: $editing_color;
 	}
+
+	&.cloned .ui-resizable-handle {
+		display: none !important;
+	}
 }
 
 .ui-resizable-disabled, .ui-resizable-autohide {
